--- a/CIS-alarms-cfn.yml
+++ b/CIS-alarms-cfn.yml
@@ -1,3 +1,4 @@
+##test by tayyab qadir to check the directory is publically accessable or not 
 ---
 AWSTemplateFormatVersion: 2010-09-09
 Description: CIS AWS Foundations Benchmark Metric Alarms
